# observer_ptr

./: .travis.yml  CMakeLists.txt  Readme.md
CMake/: CMakeLists.txt
doc/: observer_ptr.md
inc/observer_ptr/: observer_ptr.hpp
include/boost/observer_ptr/: observer_ptr.hpp
test/: main.cpp  observer_ptr.cpp
